Colaboratory を使用して作成しました

--- a/note_book/submission_24.ipynb
+++ b/note_book/submission_24.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "https://github.com/kyochanpy/Google_Smartphone_Decimeter_Challenge/blob/main/note_book/submission_17.ipynb",
-      "authorship_tag": "ABX9TyM1qFVeg2+mnbR1urpUSkZ8",
+      "authorship_tag": "ABX9TyNuswaZc1gXfyDIm1I34eAm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -509,7 +509,7 @@
             "left": null
           }
         },
-        "8d12036fe77c45bbb7a9e52d1aa6aa35": {
+        "de98012aa58c4a3aa404372cb61af525": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
           "state": {
@@ -521,15 +521,15 @@
             "_view_count": null,
             "_view_module_version": "1.5.0",
             "box_style": "",
-            "layout": "IPY_MODEL_6daafe1ad0c94607abd48152c151f35f",
+            "layout": "IPY_MODEL_92013da7170345708bfe42f8d7f5a6a7",
             "_model_module": "@jupyter-widgets/controls",
             "children": [
-              "IPY_MODEL_750b2e42f85d4d77a5ac61dcfe3b6ecb",
-              "IPY_MODEL_4bb03227623c4d1b9b0ab5e6249185a9"
+              "IPY_MODEL_185daf56de3e4ccc967acf2b80b69282",
+              "IPY_MODEL_c75cfca5a71244d08f75fa9dca074a45"
             ]
           }
         },
-        "6daafe1ad0c94607abd48152c151f35f": {
+        "92013da7170345708bfe42f8d7f5a6a7": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "state": {
@@ -580,50 +580,50 @@
             "left": null
           }
         },
-        "750b2e42f85d4d77a5ac61dcfe3b6ecb": {
+        "185daf56de3e4ccc967acf2b80b69282": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatProgressModel",
           "state": {
             "_view_name": "ProgressView",
-            "style": "IPY_MODEL_77bb05e8d870414da24425f27f3be51a",
+            "style": "IPY_MODEL_18794334bfc24c2284f327308a9f14ec",
             "_dom_classes": [],
-            "description": "100%",
+            "description": " 33%",
             "_model_name": "FloatProgressModel",
-            "bar_style": "success",
+            "bar_style": "",
             "max": 48,
             "_view_module": "@jupyter-widgets/controls",
             "_model_module_version": "1.5.0",
-            "value": 48,
+            "value": 17,
             "_view_count": null,
             "_view_module_version": "1.5.0",
             "orientation": "horizontal",
             "min": 0,
             "description_tooltip": null,
             "_model_module": "@jupyter-widgets/controls",
-            "layout": "IPY_MODEL_d550bedeff9e4c53b9a37a0dc6705dd7"
+            "layout": "IPY_MODEL_0fa1eed906124eb28feaf39bf27a9b2b"
           }
         },
-        "4bb03227623c4d1b9b0ab5e6249185a9": {
+        "c75cfca5a71244d08f75fa9dca074a45": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "state": {
             "_view_name": "HTMLView",
-            "style": "IPY_MODEL_3584e686cb2948b195d6809424b4fb43",
+            "style": "IPY_MODEL_1caf1c3bed16481d811689da5e9491d6",
             "_dom_classes": [],
             "description": "",
             "_model_name": "HTMLModel",
             "placeholder": "​",
             "_view_module": "@jupyter-widgets/controls",
             "_model_module_version": "1.5.0",
-            "value": " 48/48 [00:36&lt;00:00,  1.33it/s]",
+            "value": " 16/48 [00:12&lt;00:22,  1.41it/s]",
             "_view_count": null,
             "_view_module_version": "1.5.0",
             "description_tooltip": null,
             "_model_module": "@jupyter-widgets/controls",
-            "layout": "IPY_MODEL_874e3e43cc9444e7a9e832d1ce9b0995"
+            "layout": "IPY_MODEL_2789e237c4d942f8859981f441b3848a"
           }
         },
-        "77bb05e8d870414da24425f27f3be51a": {
+        "18794334bfc24c2284f327308a9f14ec": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
           "state": {
@@ -638,7 +638,7 @@
             "_model_module": "@jupyter-widgets/controls"
           }
         },
-        "d550bedeff9e4c53b9a37a0dc6705dd7": {
+        "0fa1eed906124eb28feaf39bf27a9b2b": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "state": {
@@ -689,7 +689,7 @@
             "left": null
           }
         },
-        "3584e686cb2948b195d6809424b4fb43": {
+        "1caf1c3bed16481d811689da5e9491d6": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "state": {
@@ -703,7 +703,7 @@
             "_model_module": "@jupyter-widgets/controls"
           }
         },
-        "874e3e43cc9444e7a9e832d1ce9b0995": {
+        "2789e237c4d942f8859981f441b3848a": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "state": {
@@ -1307,8 +1307,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "j5s8s3mqbCJH",
-        "outputId": "0c19e3f2-06a3-4498-f1de-fa3f673a9128",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 944,
@@ -1322,7 +1320,9 @@
             "0df66de070bb46368d473d9a1669b8d9",
             "ee0fa35cb73a4decb0bc38e2bfb695d5"
           ]
-        }
+        },
+        "id": "j5s8s3mqbCJH",
+        "outputId": "0c19e3f2-06a3-4498-f1de-fa3f673a9128"
       },
       "source": [
         "#check_score\n",
@@ -1786,7 +1786,7 @@
         "                                [0, 0, 0, 1, 0, T], [0, 0, 0, 0, 1, 0], [0, 0, 0, 0, 0, 1]])\n",
         "    process_noise = np.diag([1e-5, 1e-5, 5e-6, 5e-6, 1e-6, 1e-6]) + np.ones((6, 6)) * 1e-9\n",
         "    observation_model = np.array([[1, 0, 0, 0, 0, 0], [0, 1, 0, 0, 0, 0]])\n",
-        "    observation_noise = np.diag([1e-4, 1e-4]) + np.ones((2, 2)) * 1e-9\n",
+        "    observation_noise = np.diag([6e-5, 6e-5]) + np.ones((2, 2)) * 1e-9\n",
         "\n",
         "    kf = simdkalman.KalmanFilter(\n",
         "            state_transition = state_transition,\n",
@@ -1815,7 +1815,7 @@
         "    \n",
         "    return output_df"
       ],
-      "execution_count": 21,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -1832,20 +1832,20 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 629,
+          "height": 49,
           "referenced_widgets": [
-            "8d12036fe77c45bbb7a9e52d1aa6aa35",
-            "6daafe1ad0c94607abd48152c151f35f",
-            "750b2e42f85d4d77a5ac61dcfe3b6ecb",
-            "4bb03227623c4d1b9b0ab5e6249185a9",
-            "77bb05e8d870414da24425f27f3be51a",
-            "d550bedeff9e4c53b9a37a0dc6705dd7",
-            "3584e686cb2948b195d6809424b4fb43",
-            "874e3e43cc9444e7a9e832d1ce9b0995"
+            "de98012aa58c4a3aa404372cb61af525",
+            "92013da7170345708bfe42f8d7f5a6a7",
+            "185daf56de3e4ccc967acf2b80b69282",
+            "c75cfca5a71244d08f75fa9dca074a45",
+            "18794334bfc24c2284f327308a9f14ec",
+            "0fa1eed906124eb28feaf39bf27a9b2b",
+            "1caf1c3bed16481d811689da5e9491d6",
+            "2789e237c4d942f8859981f441b3848a"
           ]
         },
         "id": "UTx6XpUt77Ai",
-        "outputId": "5d278b18-be95-4344-a873-dcc10f9abb72"
+        "outputId": "c9dfd642-31d2-45ca-b11c-93a7a51f4b7c"
       },
       "source": [
         "submission_1 = outlier(test_base)\n",
@@ -1854,13 +1854,13 @@
         "submission_4 = position_shift(submission_3)\n",
         "#submission_5 = kalman_filter(submission_4)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "8d12036fe77c45bbb7a9e52d1aa6aa35",
+              "model_id": "de98012aa58c4a3aa404372cb61af525",
               "version_minor": 0,
               "version_major": 2
             },
@@ -1871,86 +1871,19 @@
           "metadata": {
             "tags": []
           }
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "\u001b[32m[I 2021-07-03 22:57:17,439]\u001b[0m A new study created in memory with name: no-name-22d76ee0-403a-4c49-88df-974096b6fa49\u001b[0m\n",
-            "\u001b[32m[I 2021-07-03 22:57:23,806]\u001b[0m Trial 0 finished with value: 5.616561859358274 and parameters: {'a': -0.7614492465687375}. Best is trial 0 with value: 5.616561859358274.\u001b[0m\n",
-            "\u001b[32m[I 2021-07-03 22:57:30,066]\u001b[0m Trial 1 finished with value: 5.319157123564368 and parameters: {'a': -0.1046475812263492}. Best is trial 1 with value: 5.319157123564368.\u001b[0m\n",
-            "\u001b[32m[I 2021-07-03 22:57:36,394]\u001b[0m Trial 2 finished with value: 5.202304534658181 and parameters: {'a': 0.8950309145954534}. Best is trial 2 with value: 5.202304534658181.\u001b[0m\n",
-            "\u001b[32m[I 2021-07-03 22:57:42,688]\u001b[0m Trial 3 finished with value: 5.615188717381285 and parameters: {'a': -0.7585749276891676}. Best is trial 2 with value: 5.202304534658181.\u001b[0m\n",
-            "\u001b[32m[I 2021-07-03 22:57:49,224]\u001b[0m Trial 4 finished with value: 5.522208228811218 and parameters: {'a': -0.5833860040380681}. Best is trial 2 with value: 5.202304534658181.\u001b[0m\n",
-            "\u001b[32m[I 2021-07-03 22:57:55,528]\u001b[0m Trial 5 finished with value: 5.23928517803379 and parameters: {'a': 0.18182500967963655}. Best is trial 2 with value: 5.202304534658181.\u001b[0m\n",
-            "\u001b[32m[I 2021-07-03 22:58:02,090]\u001b[0m Trial 6 finished with value: 5.209254291820169 and parameters: {'a': 0.9560622534758041}. Best is trial 2 with value: 5.202304534658181.\u001b[0m\n",
-            "\u001b[32m[I 2021-07-03 22:58:08,282]\u001b[0m Trial 7 finished with value: 5.210982303357258 and parameters: {'a': 0.32651762848928767}. Best is trial 2 with value: 5.202304534658181.\u001b[0m\n",
-            "\u001b[32m[I 2021-07-03 22:58:14,759]\u001b[0m Trial 8 finished with value: 5.7345423737675425 and parameters: {'a': -0.9672964480802491}. Best is trial 2 with value: 5.202304534658181.\u001b[0m\n",
-            "\u001b[32m[I 2021-07-03 22:58:21,055]\u001b[0m Trial 9 finished with value: 5.206971547049353 and parameters: {'a': 0.3461976521180594}. Best is trial 2 with value: 5.202304534658181.\u001b[0m\n",
-            "\u001b[32m[I 2021-07-03 22:58:27,459]\u001b[0m Trial 10 finished with value: 5.214393567818645 and parameters: {'a': 0.9989160125375863}. Best is trial 2 with value: 5.202304534658181.\u001b[0m\n",
-            "\u001b[32m[I 2021-07-03 22:58:33,693]\u001b[0m Trial 11 finished with value: 5.190831779017985 and parameters: {'a': 0.5496798973136501}. Best is trial 11 with value: 5.190831779017985.\u001b[0m\n",
-            "\u001b[32m[I 2021-07-03 22:58:40,096]\u001b[0m Trial 12 finished with value: 5.190172611874163 and parameters: {'a': 0.711884371659873}. Best is trial 12 with value: 5.190172611874163.\u001b[0m\n",
-            "\u001b[32m[I 2021-07-03 22:58:46,308]\u001b[0m Trial 13 finished with value: 5.188643914414609 and parameters: {'a': 0.6238191582703103}. Best is trial 13 with value: 5.188643914414609.\u001b[0m\n",
-            "\u001b[32m[I 2021-07-03 22:58:52,873]\u001b[0m Trial 14 finished with value: 5.1909059483584015 and parameters: {'a': 0.719211378577137}. Best is trial 13 with value: 5.188643914414609.\u001b[0m\n",
-            "\u001b[32m[I 2021-07-03 22:58:59,206]\u001b[0m Trial 15 finished with value: 5.321212991317701 and parameters: {'a': -0.11082034700094368}. Best is trial 13 with value: 5.188643914414609.\u001b[0m\n",
-            "\u001b[32m[I 2021-07-03 22:59:05,711]\u001b[0m Trial 16 finished with value: 5.188277225075572 and parameters: {'a': 0.6288737967088791}. Best is trial 16 with value: 5.188277225075572.\u001b[0m\n",
-            "\u001b[32m[I 2021-07-03 22:59:11,975]\u001b[0m Trial 17 finished with value: 5.190692186053007 and parameters: {'a': 0.574561110248979}. Best is trial 16 with value: 5.188277225075572.\u001b[0m\n",
-            "\u001b[32m[I 2021-07-03 22:59:18,410]\u001b[0m Trial 18 finished with value: 5.41652756500063 and parameters: {'a': -0.35798705304379697}. Best is trial 16 with value: 5.188277225075572.\u001b[0m\n",
-            "\u001b[32m[I 2021-07-03 22:59:24,782]\u001b[0m Trial 19 finished with value: 5.251120875510685 and parameters: {'a': 0.12789924999075097}. Best is trial 16 with value: 5.188277225075572.\u001b[0m\n",
-            "\u001b[32m[I 2021-07-03 22:59:30,984]\u001b[0m Trial 20 finished with value: 5.192016467260683 and parameters: {'a': 0.5030212672052526}. Best is trial 16 with value: 5.188277225075572.\u001b[0m\n",
-            "\u001b[32m[I 2021-07-03 22:59:37,422]\u001b[0m Trial 21 finished with value: 5.193446062536814 and parameters: {'a': 0.7543181534795582}. Best is trial 16 with value: 5.188277225075572.\u001b[0m\n",
-            "\u001b[32m[I 2021-07-03 22:59:43,689]\u001b[0m Trial 22 finished with value: 5.192056279769011 and parameters: {'a': 0.733126442009549}. Best is trial 16 with value: 5.188277225075572.\u001b[0m\n",
-            "\u001b[32m[I 2021-07-03 22:59:50,215]\u001b[0m Trial 23 finished with value: 5.198042562071538 and parameters: {'a': 0.41398726354275067}. Best is trial 16 with value: 5.188277225075572.\u001b[0m\n",
-            "\u001b[32m[I 2021-07-03 22:59:56,509]\u001b[0m Trial 24 finished with value: 5.198325020632468 and parameters: {'a': 0.8397250531554286}. Best is trial 16 with value: 5.188277225075572.\u001b[0m\n",
-            "\u001b[32m[I 2021-07-03 23:00:03,049]\u001b[0m Trial 25 finished with value: 5.1902510223485185 and parameters: {'a': 0.5796533246747444}. Best is trial 16 with value: 5.188277225075572.\u001b[0m\n",
-            "\u001b[32m[I 2021-07-03 23:00:09,541]\u001b[0m Trial 26 finished with value: 5.232390185559091 and parameters: {'a': 0.2104323262810504}. Best is trial 16 with value: 5.188277225075572.\u001b[0m\n",
-            "\u001b[32m[I 2021-07-03 23:00:16,051]\u001b[0m Trial 27 finished with value: 5.283890070707331 and parameters: {'a': 0.013572850253907975}. Best is trial 16 with value: 5.188277225075572.\u001b[0m\n",
-            "\u001b[32m[I 2021-07-03 23:00:22,398]\u001b[0m Trial 28 finished with value: 5.213896187307961 and parameters: {'a': 0.9949385429585066}. Best is trial 16 with value: 5.188277225075572.\u001b[0m\n",
-            "\u001b[32m[I 2021-07-03 23:00:28,977]\u001b[0m Trial 29 finished with value: 5.188740856158302 and parameters: {'a': 0.6905880359670344}. Best is trial 16 with value: 5.188277225075572.\u001b[0m\n"
-          ],
-          "name": "stderr"
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "HcpVOzWZffpi",
-        "outputId": "97874516-f6aa-4eeb-b76e-fc152038a7c9"
+        "id": "HcpVOzWZffpi"
       },
       "source": [
         "submission_4.isna().sum()"
       ],
-      "execution_count": 23,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "phone                  0\n",
-              "millisSinceGpsEpoch    0\n",
-              "latDeg                 0\n",
-              "lngDeg                 0\n",
-              "phoneName              0\n",
-              "collectionName         0\n",
-              "dtype: int64"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 23
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1960,7 +1893,7 @@
       "source": [
         "submission_4[sub.columns].to_csv('submission_24.csv', index=False)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
